@@ -1,2 +1,1 @@
-* seqBCF2GDS
 * seqSlidingWindow
